@@ -7,16 +7,16 @@ require_once(WWW_DIR."lib/tmux.php");
 if (isset($argv[1]))
 {
 	$pieces = explode(" ", $argv[1]);
-	if (isset($pieces[1]) && $pieces[1] == 1)
+	if (isset($pieces[1]) && trim($pieces[1],"'") == 1)
 	{
 		$backfill = new Backfill();
-		$backfill->backfillAllGroups($pieces[0]);
+		$backfill->backfillAllGroups(trim($pieces[0],"'"));
 	}
-	elseif (isset($pieces[1]) && $pieces[1] == 2)
+	elseif (isset($pieces[1]) && trim($pieces[1],"'") == 2)
 	{
 		$tmux = new Tmux();
 		$count = $tmux->get()->BACKFILL_QTY;
 		$backfill = new Backfill();
-		$backfill->backfillPostAllGroups($pieces[0], $count);
+		$backfill->backfillPostAllGroups(trim($pieces[0],"'"), $count);
 	}
 }
