@@ -13,9 +13,9 @@ $namefixer = new Namefixer();
 if (isset($argv[1]))
 {
 	$pieces = explode(" ", $argv[1]);
-	if (isset($pieces[1]) && $pieces[0] == "nfo")
+	if (isset($pieces[1]) && trim($pieces[0],"'") == "nfo")
 	{
-		$release = $pieces[1];
+		$release = trim($pieces[1],"'");
 		if ($res = $db->queryOneRow(sprintf("SELECT rel.guid AS guid, nfo.releaseid AS nfoid, rel.groupid, rel.categoryid, rel.searchname, uncompress(nfo) AS textstring, rel.id AS releaseid FROM releases rel INNER JOIN releasenfo nfo ON (nfo.releaseid = rel.id) WHERE rel.id = %d", $release)))
 		{
 			//ignore encrypted nfos
@@ -38,9 +38,9 @@ if (isset($argv[1]))
 		}
 	}
 
-	if (isset($pieces[1]) && $pieces[0] == "filename")
+	if (isset($pieces[1]) && trim($pieces[0],"'") == "filename")
 	{
-		$release = $pieces[1];
+		$release = trim($pieces[1],"'");
 		if ($res = $db->queryOneRow(sprintf("SELECT relfiles.name AS textstring, rel.categoryid, rel.searchname, rel.groupid, relfiles.releaseid AS fileid, rel.id AS releaseid FROM releases rel INNER JOIN releasefiles relfiles ON (relfiles.releaseid = rel.id) WHERE rel.id = %d", $release)))
 		{
 			//echo $res['textstring']."\n";
@@ -51,9 +51,9 @@ if (isset($argv[1]))
 		}
 	}
 
-	if (isset($pieces[1]) && $pieces[0] == "md5")
+	if (isset($pieces[1]) && trim($pieces[0],"'") == "md5")
 	{
-		$release = $pieces[1];
+		$release = trim($pieces[1],"'");
 		if ($res = $db->queryOneRow(sprintf("SELECT r.id, r.name, r.searchname, r.categoryid, r.groupid, rf.name AS filename FROM releases r LEFT JOIN releasefiles rf ON r.id = rf.releaseid WHERE r.id = %d", $release)))
 		{
 			if (preg_match("/[a-f0-9]{32}/i", $res["name"], $matches))
@@ -64,11 +64,11 @@ if (isset($argv[1]))
 		}
 	}
 
-	if (isset($pieces[1]) && $pieces[0] == "par2")
+	if (isset($pieces[1]) && trim($pieces[0],"'") == "par2")
 	{
-		$relID = $pieces[1];
-		$guid = $pieces[2];
-		$groupID = $pieces[3];
+		$relID = trim($pieces[1],"'");
+		$guid = trim($pieces[2],"'");
+		$groupID = trim($pieces[3],"'");
 		$nzbcontents = new NZBcontents();
 		$nzbcontents->checkPAR2($guid, $relID, $groupID, true);
 		echo ".";
