@@ -14,7 +14,7 @@ $n = "\n";
 $category = new Category();
 $groups = new Groups();
 
-$requestIDtmp = explode("]", substr($pieces[1], 1));
+$requestIDtmp = explode("]", substr(trim($pieces[1],"'"), 1));
 $bFound = false;
 $newTitle = "";
 $updated = 0;
@@ -24,7 +24,7 @@ if (count($requestIDtmp) >= 1)
 	$requestID = (int) $requestIDtmp[0];
 	if ($requestID != 0)
 	{
-		$newTitle = getReleaseNameFromRequestID($page->site, $requestID, $pieces[2]);
+		$newTitle = getReleaseNameFromRequestID($page->site, $requestID, trim($pieces[2],"'"));
 		if ($newTitle != false && $newTitle != "")
 			$bFound = true;
 		else
@@ -34,22 +34,22 @@ if (count($requestIDtmp) >= 1)
 
 if ($bFound)
 {
-	$groupname = $groups->getByNameByID($pieces[2]);
+	$groupname = $groups->getByNameByID(trim($pieces[2],"'"));
 	$determinedcat = $category->determineCategory($newTitle, $groupname);
-	$run = $db->prepare(sprintf("UPDATE releases set reqidstatus = 1, relnamestatus = 12, searchname = %s, categoryid = %d where id = %d", $db->escapeString($newTitle), $determinedcat, $pieces[0]));
+	$run = $db->prepare(sprintf("UPDATE releases set reqidstatus = 1, relnamestatus = 12, searchname = %s, categoryid = %d where id = %d", $db->escapeString($newTitle), $determinedcat, trim($pieces[0],"'")));
 	$run->execute();
 	$newcatname = $category->getNameByID($determinedcat);
 	echo	$n.$n."New name:  ".$newTitle.$n.
-		"Old name:  ".$pieces[1].$n.
+		"Old name:  ".trim($pieces[1],"'").$n.
 		"New cat:   ".$newcatname.$n.
-		"Group:     ".$pieces[2].$n.
+		"Group:     ".trim($pieces[2],"'").$n.
 		"Method:    "."requestID".$n.
-		"ReleaseID: ". $pieces[0].$n;
+		"ReleaseID: ". trim($pieces[0],"'").$n;
 	$updated++;
 }
 else
 {
-	$db->queryExec("UPDATE releases SET reqidstatus = -2 WHERE id = " . $pieces[0]);
+	$db->queryExec("UPDATE releases SET reqidstatus = -2 WHERE id = " . trim($pieces[0],"'"));
 }
 
 function getReleaseNameFromRequestID($site, $requestID, $groupName)
