@@ -120,7 +120,7 @@ def main(args):
 
 	#now load some arbitrary jobs into the queue
 	for gnames in datas:
-		my_queue.put("%s %s" % (gnames[0], type))
+		my_queue.put("'%s' '%s'" % (gnames[0], type))
 
 	my_queue.join()
 
