@@ -102,7 +102,7 @@ def main(args):
 				my_queue.put(os.path.join(nzbs,gnames))
 		elif int(use_true[0]) == 2 or ( len(sys.argv) >= 2 and sys.argv[1] == "true"):
 			for gnames in datas:
-				my_queue.put('%s %s' % (os.path.join(nzbs,gnames), "true"))
+				my_queue.put("'%s' '%s'" % (os.path.join(nzbs,gnames), "true"))
 	if len(datas) == 0:
 		if int(use_true[0]) == 1:
 			my_queue.put(nzbs)
