@@ -100,7 +100,7 @@ def main():
 
 	#now load some arbitrary jobs into the queue
 	for release in datas:
-		my_queue.put("%s %s" % (release[0], release[1]))
+		my_queue.put("'%s' '%s'" % (release[0], release[1]))
 
 	my_queue.join()
 
