@@ -86,7 +86,7 @@ def main():
 
 	#now load some arbitrary jobs into the queue
 	for release in datas:
-		my_queue.put("%s                       %s                       %s" % (release[0], release[1], release[2]))
+		my_queue.put("'%s'                       '%s'                       '%s'" % (release[0], release[1], release[2]))
 
 	my_queue.join()
 
